--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,11 @@
 services:
-  app:
+  otomoto-app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: nest-app
+    shm_size: '1g' # Add this line
+    container_name: otomoto-app
     environment:
-      - CHROME_BIN=/usr/bin/google-chrome
-      - CHROME_PATH=/usr/bin/google-chrome
       - POSTGRES_URI=${POSTGRES_URI}
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       - TELEGRAM_ADMIN_ID=${TELEGRAM_ADMIN_ID}
@@ -15,6 +14,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_PORT=${POSTGRES_PORT}
+      - FIREFOX_BINARY=${FIREFOX_BINARY}
     ports:
       - "3000:3000"
     depends_on:
@@ -33,7 +33,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
-      - "5434:5432"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -44,3 +44,4 @@ volumes:
 
 networks:
   otomoto_network:
+    name: otomoto_network
